--- a/Vpnserver/index.html
+++ b/Vpnserver/index.html
@@ -12,6 +12,23 @@
   </head>
   <body>
     <h1>Apa itu Vpn server? </h1>
+    <p>
+      Virtual Private Network atau VPN adalah layanan yang memungkinkan pengunanya bisa mengakses situs secara pribadi melalui server jaringan lain
+    </p>
+    <h1>kelebihan&kekurangan Vpn server</h1>
+    <p>
+      kelebihan Vpnserver:
+      -Informasi pribadi terjaga
+      -Keamanan koneksi yang lebih baik
+      -Dapat mengakses website yang diblokir
+
+      kekurangan:
+      -Kecepatan internet berkurang
+      -Sambungan internet tidak stabil
+      -Memerlukan pengaturan manual
+    </p>
+    <h1>contoh aplikasi Vpnswrvee</h1>
+    <img src="Vpn.jpg" class="d-block w-100" alt="..." />
 
     <!-- Optional JavaScript; choose one of the two! -->
 
