--- a/Vpnserver/index.html
+++ b/Vpnserver/index.html
@@ -28,7 +28,7 @@
       -Memerlukan pengaturan manual
     </p>
     <h1>contoh aplikasi Vpnswrvee</h1>
-    <img src="Vpn.jpg" class="d-block w-100" alt="..." />
+    <img src="Vpnturbo.jpg" class="d-block w-100" alt="..." />
 
     <!-- Optional JavaScript; choose one of the two! -->
 
