--- a/Vpnserver/index.html
+++ b/Vpnserver/index.html
@@ -28,7 +28,7 @@
       -Sambungan internet tidak stabil
       -Memerlukan pengaturan manual
     </p>
-    <h1>contoh aplikasi Vpnswrvee</h1>
+    <h1>contoh aplikasi Vpnserver</h1>
     <img src="Folder/gambar/VpnTURBO.jpg" class="d-block w-100" alt="..." />
 
     <!-- Optional JavaScript; choose one of the two! -->
