--- a/Vpnserver/index.html
+++ b/Vpnserver/index.html
@@ -29,7 +29,7 @@
       -Memerlukan pengaturan manual
     </p>
     <h1>contoh aplikasi Vpnserver</h1>
-    <img src="Folder/VpnTURBO.jpg" class="d-block w-100" alt="..." />
+    <img src="folder/VpnTURBO1.jpg" class="d-block w-100" alt="..." />
 
     <!-- Optional JavaScript; choose one of the two! -->
 
