--- a/Vpnserver/index.html
+++ b/Vpnserver/index.html
@@ -21,12 +21,12 @@
       -Informasi pribadi terjaga
       -Keamanan koneksi yang lebih baik
       -Dapat mengakses website yang diblokir
-      
-
-      kekurangan:
-      -Kecepatan internet berkurang
-      -Sambungan internet tidak stabil
-      -Memerlukan pengaturan manual
+    </p>
+    <p>
+      -Koneksi internet menjadi lebih lambat
+-Konfigurasi manual menjadi cukup rumit
+-Terdapat batasan penggunaannya
+-Koneksi internet menjadi tidak stabil
     </p>
     <h1>contoh aplikasi Vpnserver</h1>
     <img src="folder/Turbo-VPN-1.jpg" class="d-block w-100" alt="..." />
@@ -34,6 +34,7 @@
   
       Turbo vpn adalah salah satu contoh vpn server yang sering digunakan oleh manusia
     </p>
+    <h1>Cara kerja Vpnserver</h1>
     <img src="folder/Carakerja.png" class="d-block w-100" alt="..." />
 
     <!-- Optional JavaScript; choose one of the two! -->
