--- a/Vpnserver/index.html
+++ b/Vpnserver/index.html
@@ -23,6 +23,7 @@
       -Dapat mengakses website yang diblokir
     </p>
     <p>
+      Kekurangan Vpn server:
       -Koneksi internet menjadi lebih lambat
 -Konfigurasi manual menjadi cukup rumit
 -Terdapat batasan penggunaannya
